force-app/main/default/objects/ssot__SalesOrderProduct__dlm/fields/ssot__IsOutOfStock__c.field-meta.xml
<CustomField>
    <fullName>ssot__IsOutOfStock__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Out Of Stock</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>IsOutOfStock</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Checkbox</type>
</CustomField>