force-app/main/default/objects/ssot__SalesOrderProduct__dlm/fields/ssot__rel_1724385281316_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1724385281316_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SalesOrderProduct_SalesModelId_map_S_rel</label>
    <referenceTo>ssot__SalesModel__dlm</referenceTo>
    <relationshipLabel>SalesOrderProduct_SalesModelId_map_S_rel</relationshipLabel>
    <relationshipName>rel_1724385281316_end</relationshipName>
    <type>Lookup</type>
</CustomField>