force-app/main/default/objects/ssot__SalesOrderProduct__dlm/fields/ssot__SalesModelId__c.field-meta.xml
<CustomField>
    <fullName>ssot__SalesModelId__c</fullName>
    <label>Sales Model</label>
    <length>36</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>SalesModelId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>